# SYDE-223-Coursework

./: README.md
a1/: CMakeLists.txt  doubly-linked-list.cpp  doubly-linked-list.h  polynomial.cpp  polynomial.h  sequential-list.cpp  sequential-list.h
a2/: CMakeLists.txt  circular-queue.cpp  circular-queue.h  dynamic-stack.cpp  dynamic-stack.h
a3/: CMakeLists.txt  avl-tree.cpp  avl-tree.h  binary-search-tree.cpp  binary-search-tree.h
